# tradesys

./: CMakeLists.txt  Makefile  setup.py
src/: backtest_run.cpp  backtest_run.h  backtest_stats.cpp  backtest_stats.h  common.h  data.cpp  data.h  dtime.cpp  dtime.h  expression.cpp  expression.h  live.cpp  live.h  main.cpp  python_bindings.cpp  python_bindings.h  sformat.cpp  sformat.h  signal_forest.cpp  signal_forest.h  signal_tree.cpp  signal_tree.h
src/signals/: base_signal.cpp  base_signal.h  candles.cpp  candles.h  common_types.cpp  common_types.h  constraints.cpp  constraints.h  crosses.cpp  crosses.h  embedded.cpp  embedded.h  feedback.cpp  feedback.h  gaps.cpp  gaps.h  happened.cpp  happened.h  numeric.cpp  numeric.h  ops.cpp  ops.h  raw.cpp  raw.h  stops.cpp  stops.h  supertrend.cpp  supertrend.h  ta.cpp  ta.h  times.cpp  times.h  timesinarow.cpp  timesinarow.h
tradesys/: __init__.py  db.py  ml.py  nbtools.py  optimize.py  testing.py  tstools.py  visual.py
